src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Field__c</fullName>
        <label>Account Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_field_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sample field 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test321__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test321</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Testing_12__c</fullName>
        <label>Testing 12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Testing_Field__c</fullName>
        <label>Testing Field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>